# ShadeInfrastructure

./: CMakeLists.txt  README.md  cmakeUbuntuMake.sh  createModule.sh  install.sh
Exe/: ShadeUnleash
Resources/Infrastructure/: CMakeLists.txt  ShadeRun
Resources/Infrastructure/cmakeModules/: ConfigHandling.cmake  CreateDocFile.cmake  LoadInstallFolders.cmake  LoadProjectConfig.cmake  LoadProjectVersion.cmake  MessageDisplay.cmake  OSisLinux.cmake
Resources/Infrastructure/infrastructureModules/: GetConfField  abstracttool.py  listTools.sh  utils.sh
Resources/Infrastructure/modules/: OSisLinux.cmake
Resources/Infrastructure/pythonModules/configParsing/: abstractformatparser.py  configparser.py  dconfparser.py  parsingerror.py
Resources/Infrastructure/pythonModules/tools/: abstracttool.py  cleaner.py  configchecker.py  configdisplayer.py  configfieldgetter.py  installfoldersetter.py
Resources/Infrastructure/template/: .DoxyDoc
Resources/Infrastructure/tools/: BuildDoc  CheckConfig  Clean  DisplayConfig  Generate  GetConfigField  SetInstallFolder
Resources/PythonModules/: dwfoptparse.py  infrastructureupdater.py  unleasher.py  versionsetter.py
Resources/PythonModules/tools/: infrastructureupdater.py  unleasher.py  versionsetter.py
Resources/Tools/: SetVersion  UpdateInfrastructure
doc/: .DoxyDoc
doc/html/: common__defines_8h.html  common__defines_8h.js  common__defines_8h_source.html  files.html  files.js  globals.html  globals_defs.html  index.html  navtree.js  navtreeindex.js
doc/html/search/: all_63.js  all_64.js  all_65.js  all_75.js  defines_75.js  search.js
doc/latex/: common__defines_8h.tex  doxygen.sty  files.tex  refman.tex
include/: common_defines.h
installModules/: FindXercesC.cmake  README.txt
modules/: CXXCompilerSelect.cmake  FindQtContent.cmake  FindXerces.cmake  SetUpConfigurationFlags.cmake
scripts/: dwfSign.sh  generateCMakeFile.sh  generateFile.sh  interface.sh  processCMakeStrings.sh  processStrings.sh  zenityInterface.sh
test/: README.txt
